# bb_rag

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml  test.yml
docs/: sample.md
src/: main.rs
web/: download-fonts.sh  index.html  script.js  styles.css
