[package]
name = "bb_rag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
dotenvy = "0.15"
futures-util = "0.3"
pdf-extract = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
